# roboteam_world

./: .travis.yml  CMakeLists.txt
cmake_modules/: FindNLopt.cmake
include/observer/filters/: RobotFeedbackFilter.h
include/roboteam_observer/: Handler.h
include/roboteam_world/: CompositeFilter.h  Filter.h  WorldHandler.h  predictor.h
include/roboteam_world/ball/detectors/: KickDetector.h
include/roboteam_world/ball/solvers/: LinearChip3D.h  LinearChip5D.h  LinearChip6D.h  RotatedLinearChip6D.h
include/roboteam_world/data/: Camera.h
include/roboteam_world/filters/: BallFilter.h  CompositeFilter.h  GeneralFilter.h  RobotFilter.h  WorldFilter.h
include/roboteam_world/filters/kalman/: KalmanFilter.h
include/roboteam_world/kalman/: WorldFilter.h  constantsK.h  kalmanBall.h  kalmanFilter.h  kalmanObject.h
include/roboteam_world/world/: filtered_world.h
observer/: CMakeLists.txt
observer/include/observer/filters/vision/ball/: BallCollisionChecker.h  BallTrajectorySegment.h
observer/src/filters/vision/ball/: BallCollisionChecker.cpp  BallTrajectorySegment.cpp
src/: CompositeFilter.cpp  Handler.cpp  WorldHandler.cpp  main.cpp
src/ball/detectors/: FastDetector.cpp  FastDetector.h  KickDetector.cpp
src/ball/solvers/: BouncePoint.cpp  BouncePoint.h  LinearChip3D.cpp  LinearChip5D.cpp  LinearChip6D.cpp  NonLinearChip6D.cpp  NonLinearChip6D.h  OneCameraLinearChip6D.cpp  OneCameraLinearChip6D.h  RotatedLinearChip6D.cpp
src/data/: Camera.cpp
src/filtered_world/: filtered_world.cpp
src/filters/: BallFilter.cpp  CompositeFilter.cpp  GeneralFilter.cpp  WorldFilter.cpp
src/filters/chip/: ChipFitterSimple.cpp  ChipFitterSimple.h
src/filters/kalman/: KalmanBall.cpp  KalmanFilter.cpp  KalmanObject.cpp  KalmanRobot.cpp
src/kalman/: WorldFilter.cpp  kalmanBall.cpp  kalmanFilter.cpp  kalmanObject.cpp  kalmanThem.cpp  kalmanUs.cpp
src/observer/filters/: RobotFeedbackFilter.cpp  WorldFilter.cpp
src/roboteam_observer/: Handler.cpp
src/util/: KalmanFilter.h  RobotFilter.cpp  RobotFilter.h
src/utils/: ball.cpp  predictor.cpp
test/: KalmanTest.cpp
